# conformal-protein-retrieval

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DATA.md  DEVELOPMENT.md  Dockerfile  GETTING_STARTED.md  HANDOFF.md  Interactive-1.ipynb  LICENSE  MODAL_DEPLOY.md  PLAN.md  README.md  REPO_ORGANIZATION.md  SESSION_SUMMARY.md  TEST_SUMMARY.md  UPLOAD_CHECKLIST.md  analyze_protein_vec_results.ipynb  analyze_scope_hierarchical_loss_protein_vec.ipynb  analyze_scope_protein_vec.ipynb  app.py  apptainer.def  conformal_pfam.npy  convert_fasta_to_tsv.py  create_learn_then_test.ipynb  create_new_learn_then_test.ipynb  docker-compose.yml  dockerfile  environment.yml  modal_app.py  pyproject.toml  requirements.txt  scope_utils.py  setup.py  test_scope_conformal_retrieval.ipynb  util.py
afdb/: analyze_afdb_protein_vec.ipynb  analyze_afdb_tm_vec.ipynb  test_lambdas.py  test_open.ipynb
clean_selection/: README.md  analyze_clean_hierarchical_loss_protein_vec.ipynb  analyze_new_price_pppl.ipynb  clean_new_v_ec_cluster.npy  clean_utils.py  compute_new_price_pppl.py  dists.pkl  get_clean_dists.ipynb  process_clean_ec.ipynb  sorted_dict.pkl  true_labels.pkl
dali_prefilter/: embed_afdb.py
data/: create_learn_then_test.ipynb  create_new_learn_then_test.ipynb  create_pfam_data.ipynb  create_smaller_ltt.ipynb  create_uniprot_fasta.ipynb  desktop.ini  jcvi_csv_to_fasta.py  sim2prob_lookup.csv
docs/: INSTALLATION.md  LEARNINGS.md  QUICKSTART.md  REPRODUCIBILITY.md  VERIFICATION_NOTES.md
ec/: analyze_ec_hierarchical_loss_protein_vec.ipynb  process_pfam_ec.ipynb
pfam/: analyze_protein_vec_results.ipynb  generate_fdr.py  generate_fnr.py  genes_unknown.ipynb  multidomain_search.ipynb  sva_reliability.ipynb  sva_results.py  tmp.py
protein_conformal/: README.md  __init__.py  cli.py  embed_protein_vec.py  gradio_app.py  scope_utils.py  util.py
results/: 1A7F_final_probabilities.csv  1A7F_search_results.csv  calibration_probs.csv  clean_thresholds.csv  fdr_thresholds.csv  fdr_thresholds_partial.csv  final_probabilities.csv  fnr_thresholds.csv  fnr_thresholds_partial.csv  search_results.csv  uniprot_final_probabilities.csv  uniprot_search_results.csv
scope/: analyze_scope_hierarchical_loss_protein_vec.ipynb  analyze_scope_protein_vec.ipynb  parse_foldseek_hits.ipynb  scope_dali_prefilter_foldseek.ipynb  scope_df_from_fasta.csv  scope_lookup_df.csv  scope_test_df.csv  test_scope_conformal_retrieval.ipynb
scripts/: SLURM_JOBS.md  combine_fdr_results.sh  (+58 more)
(+50 files in other folders)
